@@ -1,3 +1,9 @@
+20090216
+ - (djm) [regress/conch-ciphers.sh regress/putty-ciphers.sh]
+   [regress/putty-kex.sh regress/putty-transfer.sh] Downgrade disabled
+   interop tests from FATAL error to a warning. Allows some interop
+   tests to proceed if others are missing necessary prerequisites.
+
 20090214
  - (djm) OpenBSD CVS Sync
    - dtucker@cvs.openbsd.org 2009/02/02 11:15:14
@@ -5163,5 +5169,5 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.5195 2009/02/14 07:00:52 djm Exp $
+$Id: ChangeLog,v 1.5196 2009/02/16 04:21:39 djm Exp $
 
